# My-SM2

./: CMakeLists.txt  OTPclient.cpp  README.md  TOTP.cpp  certify_client.cpp  certify_server.cpp  enctest.cpp  gektest.cpp  notes.md  sm2.cpp  sm2KDF.cpp  sm2StreamString.cpp  sm2calculators.cpp  sm2core.cpp  sm2encrypt.cpp  sm2init.cpp  sm2signment.cpp  test.cpp  test2.cpp
include/: TOTP.h  sm2.h  sm2.hpp  sm2KDF.h  sm2StreamString.h  sm2calculators.h  sm2config.h  sm2encrypt.h  sm2init.h  sm2keymgr.h  sm2parameter.h  sm2sigment.h
src/: TOTP.cpp  sm2KDF.cpp  sm2StreamString.cpp  sm2calculators.cpp  sm2config.cpp  sm2encrypt.cpp  sm2init.cpp  sm2keymgr.cpp  sm2signment.cpp
